# wasyagana-tv

./: README.rst  pyproject.toml
src/wasyagana_tv/: __init__.py  models.py
src/wasyagana_tv/cli/: fetch_videos.py
